# lapo-docs

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  create_pr_from_patch.py  docs_search_agent.py  entrypoint.sh  generate_embeddings.py  generate_patch_agent.py  generate_pr_agent.py  git_pr.py  gitpr_agent.py  gitpr_analyzer_agent.py  lapo.py  main.py  patch_validator_agent.py  pyproject.toml  rag.py  testdata.py
.github/workflows/: lapodocs-test.yml
actions/lapodocs/: action.yml
github-actions/create-docs-update-pr/: action.yml
github-actions/generate-embeddings/: action.yml
llmautodocs/: __init__.py  main.py
llmautodocs/code_agent/: code_agent.py
llmautodocs/config/: llmconfig.py
retrieve_docs/: generate_embeddings.py  get_related_documents.py  rag.py  testdata.py
src/: lapo.py
src/agents/: generate_patch_agent.py
src/functions/: create_pr_from_patch.py  git_pr.py
src/rag/: generate_embeddings.py
