[project]
name = "llm-auto-update-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "logfire>=3.7.0",
    "pydantic-ai[logfire]>=0.0.31",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

